--- a/src/css/login.css
+++ b/src/css/login.css
@@ -33,7 +33,6 @@
   padding: 7px;
   text-align: center;
   justify-content: center;
-  margin: 3% 0 3% 0;
   border: 1px solid #ffffffde;
   color: rgb(0, 0, 0);
   box-shadow: 0px -3px 1px #a09f9f5e;
@@ -62,7 +61,7 @@
 .forgetPass {
   background: transparent;
   border: none;
-  padding: 5%;
+  padding: 5% 0 0 0;
   font-family: "Russo One", sans-serif;
 }
 
@@ -74,7 +73,7 @@
   color: rgb(119, 117, 117);
   border: 1px solid #9b9b9bde;
   box-sizing: border-box;
-  margin: 5% auto;
+  margin: 2% auto;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -94,7 +93,6 @@
 .cadastro {
   width: 100%;
   font-size: 25px;
-  padding-top: 5%;
   text-decoration: none;
   color: rgb(0, 0, 0);
 }
